rollouts.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
  namespace: default
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: demo-canary
      stableService: demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: demo-vsvc
            routes:
            - primary # At least one route is required
      steps:
      - setWeight: 5
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
        istio-injection: enabled
    spec:
      containers:
      - name: demo-app
        image: atulgupta2593/hello-world-demo:v2 #argoproj/rollouts-demo:green
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
