gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
namespace: default
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
